--- a/package.json
+++ b/package.json
@@ -13,12 +13,18 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "chart.js": "^4.1.2",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
     "next": "13.1.1",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-charts": "^2.0.0-beta.7",
     "react-dom": "18.2.0",
+    "react-fakers": "^1.0.3-rc1",
+    "react-highcharts": "^16.1.0",
     "react-icons": "^4.7.1",
+    "recharts": "^2.2.0",
     "typescript": "4.9.4"
   },
   "devDependencies": {
