--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "chart.js": "^4.1.2",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
+    "google-maps-react": "^2.0.6",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-charts": "^2.0.0-beta.7",
     "react-dom": "18.2.0",
     "react-fakers": "^1.0.3-rc1",
+    "react-google-maps": "^9.4.5",
     "react-highcharts": "^16.1.0",
     "react-icons": "^4.7.1",
     "recharts": "^2.2.0",
